--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,8 @@
     "gridfs-stream": "^1.1.1",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.4",
+    "koa-mongoose-erd-generator": "0.0.7",
     "moment": "^2.29.1",
     "mongoose": "^6.0.3",
     "mongoose-erd": "^1.0.1",
@@ -31,6 +33,6 @@
     "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.7"
   }
 }
